WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234384
REGRESSION (
r284136
): A slight horizontal rubberband kills scroll momentum
https://bugs.webkit.org/show_bug.cgi?id=234384
Summary
REGRESSION (r284136): A slight horizontal rubberband kills scroll momentum
Simon Fraser (smfr)
Reported
2021-12-15 21:43:35 PST
Load daringrireball.net on trunk and do a slightly diagonal scroll swipe (or a J-shaped scroll). The vertical momentum stalls when the rubberband animation starts (and then you sometimes get a bit at the end).
Attachments
Patch
(15.34 KB, patch)
2022-01-20 15:50 PST
,
Simon Fraser (smfr)
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(15.39 KB, patch)
2022-01-20 16:02 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-12-15 21:44:04 PST
<
rdar://problem/86558157
>
Simon Fraser (smfr)
Comment 2
2021-12-15 21:45:20 PST
This probably regressed at
https://trac.webkit.org/changeset/284136/webkit
Simon Fraser (smfr)
Comment 3
2022-01-20 15:50:43 PST
Created
attachment 449614
[details]
Patch
Simon Fraser (smfr)
Comment 4
2022-01-20 16:02:36 PST
Created
attachment 449616
[details]
Patch
EWS
Comment 5
2022-01-20 17:25:03 PST
Committed
r288336
(
246244@main
): <
https://commits.webkit.org/246244@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449616
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug